<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditProjectActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_editactivities">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_editproject_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_editproject_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_separation"
                android:text="@string/editproject_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/edittext_editproject_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editproject_name_hint"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_editproject_name" />

        </android.support.constraint.ConstraintLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/fab_separation"
            android:layout_marginTop="@dimen/fab_separation"
            android:background="?android:attr/listDivider" />


        <Switch
            android:id="@+id/switch_editproject_isended"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editproject_isended" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/fab_separation"
            android:layout_marginTop="@dimen/fab_separation"
            android:background="?android:attr/listDivider" />


        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_editproject_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_editproject_deadline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_separation"
                android:text="@string/editproject_deadline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/edittext_editproject_deadline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/editproject_deadline_hint"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imagebutton_editproject_deadline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_editproject_deadline" />

            <ImageButton
                android:id="@+id/imagebutton_editproject_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_editproject_deadline"
                app:srcCompat="@android:drawable/ic_input_add" />

        </android.support.constraint.ConstraintLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/fab_separation"
            android:layout_marginTop="@dimen/fab_separation"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textview_editproject_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editproject_task_header" />

        <Button
            android:id="@+id/button_editproject_task"
            style="@style/ButtonLikeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editproject_task"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/fab_separation"
            android:layout_marginTop="@dimen/fab_separation"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_editproject_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/fab_separation"
                android:layout_weight="1"
                android:text="@string/all_button_back"
                style="@style/ButtonCancel"
                />

            <Button
                android:id="@+id/button_editproject_save"
                style="@style/ButtonAccept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/all_button_save" />
        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>